--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
   font-weight: 700;
   font-size: 40px;
   margin-bottom: 30px;
-  color: white;
+  color: #fff;
 }
 .card-one p,
 .card-two p,
